--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,14 +11,14 @@ sqlalchemy>=2.0.0
 geoalchemy2>=0.14.0
 psycopg2-binary>=2.9.0
 
-# Geospatial libraries
-gdal==3.10.3  # Must match system GDAL version
-fiona>=1.9.0
-shapely>=2.0.0
-pyproj>=3.6.0  # For coordinate transformations
+# Geospatial libraries (Commented out for local seed script to avoid GDAL build)
+# gdal==3.10.3  # Must match system GDAL version
+# fiona>=1.9.0
+# shapely>=2.0.0
+# pyproj>=3.6.0  # For coordinate transformations
 
 # GURS Data Processing
-geopandas>=0.14.0 # geopandas depends on gdal, fiona, shapely, pyproj
+# geopandas>=0.14.0 # geopandas depends on gdal, fiona, shapely, pyproj
 
 # Configuration Management
 python-dotenv>=1.0.0
