--- a/render.yaml
+++ b/render.yaml
@@ -40,6 +40,8 @@ services:
         value: "0.01"  # 1% tolerance
       - key: MIN_CONFIDENCE
         value: "50.0"
+      - key: OPENAI_API_KEY
+        sync: false
     healthCheckPath: /health
     
   # PostgreSQL + PostGIS Database
